@@ -2,3 +2,4 @@ Version 0.5-0 (2011-08-22)
 
 o Added NAMESPACE
 o Initial package version, released to R-Forge
+o Added pca.ridge
